add video upload to database
